add simple table component